Updates from Overleaf

--- a/a16-ntt.tex
+++ b/a16-ntt.tex
@@ -106,7 +106,7 @@ $ $
 
 $A(X) = A_0(X^2) + X \cdot A_1(X^2)$
 
-$\mathcolor{white}{A(X)} = \underbrace{\underbrace{(\underbrace{A_{0,0}(X^4)}_{\text{\textcolor{red}{FFT Level 1}}} + X^2\cdot \underbrace{A_{0,1}(X^4)}_{\text{\textcolor{red}{FFT Level 1}}})}_{\text{\textcolor{red}{FFT Level 2}}} + X \cdot \underbrace{(\underbrace{A_{1,0}(X^4)}_{\text{\textcolor{red}{FFT Level 1}}} + X^2\cdot \underbrace{A_{1,1}(X^4)}_{\text{\textcolor{red}{FFT Level 1}}})}_{\text{\textcolor{red}{FFT Level 2}}}}_{\text{\textcolor{red}{FFT Level 3}}}$
+$\mathcolor{white}{A(X)} = \underbrace{\underbrace{(\underbrace{A_{0,0}(X^4)}_{\text{\mymathcolor{red}{FFT Level 1}}} + X^2\cdot \underbrace{A_{0,1}(X^4)}_{\text{\mymathcolor{red}{FFT Level 1}}})}_{\text{\mymathcolor{red}{FFT Level 2}}} + X \cdot \underbrace{(\underbrace{A_{1,0}(X^4)}_{\text{\mymathcolor{red}{FFT Level 1}}} + X^2\cdot \underbrace{A_{1,1}(X^4)}_{\text{\mymathcolor{red}{FFT Level 1}}})}_{\text{\mymathcolor{red}{FFT Level 2}}}}_{\text{\mymathcolor{red}{FFT Level 3}}}$
 
 $ $
 
@@ -114,22 +114,22 @@ To evaluate $A(X)$ at $n$ distinct roots of unity $X = \{\omega^0, \omega^1, \cd
 
 $ $
 
-\para{FFT Level $\bm{l = 1}$:} We evaluate $A_{0,0}(X^4)$, $A_{0,1}(X^4)$, $A_{1,0}(X^4)$, and $A_{1,1}(X^4)$ at $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$. However, notice that plugging in $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$ to $X^4$ results in only 2 distinct values: $\omega^0$ and $\omega^4$. This is because the order of $\omega$ is $n$ (i.e., $\omega^n = 1$), and thus $(\omega^0)^4 = (\omega^2)^4 = (\omega^4)^4 = (\omega^6)^4$, and $(\omega^1)^4 = (\omega^3)^4 = (\omega^5)^4 = (\omega^7)^4$. Therefore, we only need to evaluate $A_{0,0}(X^4)$, $A_{0,1}(X^4)$, $A_{1,0}(X^4)$, and $A_{1,1}(X^4)$ at 2 distinct $x$ values instead of 8, where each evaluation requires a constant number of arithmetic operations: computing 1 multiplication and 1 addition. As there are total 4 polynomials to evaluate (i.e., $A_{0, 1}(X^4), A_{0, 1}(X^4), A_{1, 0}(X^4), A_{1, 1}(X^4)$), we compute FFT total $4 \cdot 2 = 8$ times. 
+\para{FFT Level $\bm{l = 1}$:} We evaluate $A_{0,0}(X^4)$, $A_{0,1}(X^4)$, $A_{1,0}(X^4)$, and $A_{1,1}(X^4)$ at $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$. However, notice that plugging in $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$ to $X^4$ results in only 2 distinct values: $\omega^0$ and $\omega^4$. This is because the order of $\omega$ is $n$ (i.e., $\omega^n = 1$), and thus $(\omega^0)^4 = (\omega^2)^4 = (\omega^4)^4 = (\omega^6)^4$, and $(\omega^1)^4 = (\omega^3)^4 = (\omega^5)^4 = (\omega^7)^4$. Therefore, we only need to evaluate $A_{0,0}(X^4)$, $A_{0,1}(X^4)$, $A_{1,0}(X^4)$, and $A_{1,1}(X^4)$ at 2 distinct $x$ values instead of 8, where each evaluation requires a constant number of arithmetic operations: computing 1 multiplication and 1 addition. As there are a total of 4 polynomials to evaluate (i.e., $A_{0, 1}(X^4), A_{0, 1}(X^4), A_{1, 0}(X^4), A_{1, 1}(X^4)$), we compute FFT a total of $4 \cdot 2 = 8$ times. 
 
 $ $
 
 \para{FFT Level $\bm{l = 2}$:} Based on the evaluation results from FFT Level 1 as building blocks, we evaluate $A_{0}(X^2)$ and $A_{1}(X^2)$ at $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$. However, notice that plugging in $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$ to $X^2$ results in only 4 distinct values: $\omega^0$, $\omega^2$, $\omega^4$, and $\omega^6$.
-This is because the order of $\omega$ is $n$ (i.e., $\omega^n = 1$), and thus $(\omega^0)^2 = (\omega^4)^2$, $(\omega^1)^2 = (\omega^5)^2$, $(\omega^2)^2 = (\omega^6)^2$, and $(\omega^3)^2 = (\omega^7)^2$. Therefore, we only need to evaluate $A_{0}(X^2)$ and $A_{1}(X^2)$ at 4 distinct $x$ values instead of 8, where each evaluation requires a constant number of arithmetic operations: computing 1 multiplication and 1 addition (where we use the results from FFT Level 1 as building blocks and FFT Level 2's computation structure is the same as that of FFT Level 1). There are total 2 polynomials to evaluate (i.e., $A_{0}(X^2), A_{1}(X^2)$), thus we compute FFT total $2 \cdot 4 = 8$ times. 
+This is because the order of $\omega$ is $n$ (i.e., $\omega^n = 1$), and thus $(\omega^0)^2 = (\omega^4)^2$, $(\omega^1)^2 = (\omega^5)^2$, $(\omega^2)^2 = (\omega^6)^2$, and $(\omega^3)^2 = (\omega^7)^2$. Therefore, we only need to evaluate $A_{0}(X^2)$ and $A_{1}(X^2)$ at 4 distinct $x$ values instead of 8, where each evaluation requires a constant number of arithmetic operations: computing 1 multiplication and 1 addition (where we use the results from FFT Level 1 as building blocks and FFT Level 2's computation structure is the same as that of FFT Level 1). There are a total of 2 polynomials to evaluate (i.e., $A_{0}(X^2), A_{1}(X^2)$), thus we compute FFT a total of $2 \cdot 4 = 8$ times. 
 
 $ $
 
-\para{FFT Level $\bm{l = 3}$:} Based on the evaluation results from FFT Level 2 as building blocks, we evaluate $A(X)$ at $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$. For this last level of computation, we need to evaluate all 8 distinct $X$ values, since they are all unique values, and each evaluation requires a constant number of arithmetic operations: computing 1 multiplication and 1 addition. There is total 1 polynomial to evaluate (i.e., $A(X)$), thus we compute FFT total $1 \cdot 8 = 8$ times. 
+\para{FFT Level $\bm{l = 3}$:} Based on the evaluation results from FFT Level 2 as building blocks, we evaluate $A(X)$ at $X = \{\omega^0, \omega^1, \cdots, \omega^7\}$. For this last level of computation, we need to evaluate all 8 distinct $X$ values, since they are all unique values, and each evaluation requires a constant number of arithmetic operations: computing 1 multiplication and 1 addition. There is a total of 1 polynomial to evaluate (i.e., $A(X)$), thus we compute FFT a total of $1 \cdot 8 = 8$ times. 
 
 $ $
 
-\para{Generalization:} Suppose that the degree of the target polynomial to evaluate is bound by $n$ degree and we define $L = \log n$ (i.e., the total number of FFT levels). Then, the forward FFT operation requires total $L$ FFT levels, where each $l$-th level requires evaluation of $2^{L - l}$ polynomials at $2^l$ distinct $X$ values. Therefore, the total number of FFT computations for forward FFT is: $\log (n) \cdot (2^{L - l} \cdot 2^l) = 2^L \log n = n \log n$. Therefore, the time complexity of forward FFT is $O(n \log n)$.
+\para{Generalization:} Suppose that the degree of the target polynomial to evaluate is bound by $n$ degree and we define $L = \log n$ (i.e., the total number of FFT levels). Then, the forward FFT operation requires a total of $L$ FFT levels, where each $l$-th level requires the evaluation of $2^{L - l}$ polynomials at $2^l$ distinct $X$ values. Therefore, the total number of FFT computations for forward FFT is: $\log (n) \cdot (2^{L - l} \cdot 2^l) = 2^L \log n = n \log n$. Therefore, the time complexity of forward FFT is $O(n \log n)$.
 
-Using the FFT technique, we reduce the number of $x$ points to evaluate into half as the level goes down (while the number of polynomials to evaluate doubles), and their growth and reduction cancels each other, resulting in $O(n)$ for each level. Since there are $\log n$ such levels, the total time complexity is $O(n \log n)$. The core enabler of this optimization is the special property of the $x$ evaluation coordinates: its power (i.e., $\omega^i$) is cyclic. To enforce this cyclic property, FFT requires the evaluation points of $x$ to be the $n$-th roots of unity. 
+Using the FFT technique, we reduce the number of $x$ points to evaluate into half as the level goes down (while the number of polynomials to evaluate doubles), and their growth and reduction cancel each other, resulting in $O(n)$ for each level. Since there are $\log n$ such levels, the total time complexity is $O(n \log n)$. The core enabler of this optimization is the special property of the $x$ evaluation coordinates: its power (i.e., $\omega^i$) is cyclic. To enforce this cyclic property, FFT requires the evaluation points of $x$ to be the $n$-th roots of unity. 
 
 %\para{Computation for FFT Level 1:} We first need to evaluate $A_0(X^2)$ and $A_1(X^2)$ at $X = \{\omega^0, \omega^2, \cdots, \omega^7\}$. But notice that half of the evaluations for $A_0(X^2)$ and $A_1(X^2)$ result in the same value, because the order of $\omega$ is $n$ (i.e., $\omega^8 = 1$). Therefore, the gross computation of the 1st level of FFT technically requires only $\dfrac{n}{2} = 4$ evaluations of $A_0(X)$ and $A_1(X)$ each, instead of $\dfrac{n}{2}$ evaluations. After the evaluations, when we multiply $\omega^i$ and $A_1((\omega^i)^2)$ for each $0 \leq i \leq 7$, we only need to technically compute $\dfrac{n}{2} = 4$ of them, because we know that the second half of $\omega^i$ is an opposite-signed value of the first half of $\omega^i$, because $\omega^{\frac{n}{2}} = -1$ (\textit{proof}: since $(\omega^{\frac{n}{2}})^2) = 1$ and the order of $\omega$ is $n$, the order of $\omega^{\frac{n}{2}}$ is 2, and if $X^2 = 1$ where $X = \omega^{\frac{n}{2}}$, then $X = \{1, -1\}$, but since the order of $\omega^{\frac{n}{2}}$ is 2, $X^2 = (\omega^{\frac{n}{2}})^2$ cannot be 1, and thus $\omega^{\frac{n}{2}} = -1$). The number of required addition is $n = 8$, because we need to add the computation result of $A_0((\omega^i)^2)$ and $\omega^i \cdot A_1((\omega^i)^2)$ for $0 \leq i \leq 7$. 
 
