Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -608,7 +608,7 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 
 \section{BGV Scheme}
 \label{sec:bgv}
-%\input{d04-bgv}
+\input{d04-bgv}
 
 \clearpage
 
