Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -615,12 +615,12 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 
 \section{RNS-variant FHE Schemes}
 \label{sec:rns}
-%\input{d05-rns}
+\input{d05-rns}
 
 \clearpage
 
 \section{FHE Scheme Comparison and Summary}
-%\input{d06-scheme-summary}
+\input{d06-scheme-summary}
 
 
 %\clearpage
